--- a/app/src/main/res/layout/list_download_item.xml
+++ b/app/src/main/res/layout/list_download_item.xml
@@ -8,7 +8,7 @@
             type="com.brightcove.player.model.Video" />
         <variable
             name="downloadedVideo"
-            type="com.vipa.app.utils.helpers.downloads.room.DownloadedVideo" />
+            type="me.vipa.app.utils.helpers.downloads.room.DownloadedVideo" />
 
         <variable
             name="downloadStatus"
