logo icons changed

--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -3,7 +3,7 @@
 
     <item android:drawable="@color/black" />
     <item
-        android:drawable="@drawable/mvhub_light_180"
+        android:drawable="@drawable/vipalogo512"
         android:gravity="center">
     </item>
 </layer-list>
