--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -40,14 +40,14 @@
 
                 <ImageView
                     android:layout_width="@dimen/_120sdp"
-                    android:layout_height="@dimen/_50sdp"
+                    android:layout_height="@dimen/_45sdp"
                     android:layout_alignParentTop="true"
                     android:layout_centerInParent="true"
                     android:layout_marginLeft="@dimen/_15sdp"
 
                     android:layout_marginTop="100dp"
                     android:contentDescription="TODO"
-                    android:src="@drawable/mvhub_light_180" />
+                    android:src="@drawable/vipalogo512" />
 
 
                 <LinearLayout
