--- a/app/src/main/res/layout-sw600dp-land/new_password_screen.xml
+++ b/app/src/main/res/layout-sw600dp-land/new_password_screen.xml
@@ -41,7 +41,7 @@
                     android:layout_marginLeft="@dimen/_15sdp"
                     android:layout_marginTop="35dp"
                     android:contentDescription="TODO"
-                    android:src="@drawable/mvhub_light_180" />
+                    android:src="@drawable/vipalogo512" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
