--- a/app/src/main/res/layout-sw600dp-land/signup_activity.xml
+++ b/app/src/main/res/layout-sw600dp-land/signup_activity.xml
@@ -71,7 +71,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:contentDescription="TODO"
-                                android:src="@drawable/mvhub_light_180"
+                                android:src="@drawable/vipalogo512"
                                  />
 
                             <LinearLayout
