--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -60,10 +60,10 @@
 
                             <ImageView
                                 android:layout_width="@dimen/_120sdp"
-                                android:layout_height="@dimen/_50sdp"
+                                android:layout_height="@dimen/_45sdp"
                                 android:layout_gravity="center"
                                 android:contentDescription="TODO"
-                                android:src="@drawable/mvhub_light_180" />
+                                android:src="@drawable/vipalogo512" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
