--- a/app/src/main/res/layout/membership_plan.xml
+++ b/app/src/main/res/layout/membership_plan.xml
@@ -365,13 +365,13 @@
 
 
                     <ImageView
-                        android:layout_width="@dimen/_70sdp"
-                        android:layout_height="@dimen/_29sdp"
+                        android:layout_width="@dimen/_80sdp"
+                        android:layout_height="@dimen/_30sdp"
                         android:contentDescription="TODO"
                         android:visibility="invisible"
                         android:layout_centerInParent="true"
                         android:layout_marginTop="@dimen/_5sdp"
-                        android:src="@drawable/mvhub_light_180" />
+                        android:src="@drawable/vipalogo180" />
 
                     <LinearLayout
                         android:layout_marginTop="@dimen/_5sdp"
@@ -464,8 +464,8 @@
                                     <ImageView
                                         android:id="@+id/iv_movie"
                                         android:layout_width="@dimen/_200sdp"
-                                        android:layout_height="@dimen/_81sdp"
-                                        android:background="@drawable/mvhub_light_500"
+                                        android:layout_height="@dimen/_74sdp"
+                                        android:background="@drawable/vipalogo512"
                                         android:contentDescription="TODO"
                                         />
 
