--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -83,12 +83,12 @@
 
                 <ImageView
                     android:id="@+id/home_icon"
-                    android:layout_marginLeft="@dimen/toolbarHomeLeft"
                     android:layout_width="@dimen/toolbar_logo_icon_width"
                     android:layout_height="@dimen/toolbar_logo_icon_height"
                     android:layout_toRightOf="@+id/back_layout"
                     android:background="@drawable/vipalogo180"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="TODO"
+                    android:layout_gravity="center"/>
 
 
             </LinearLayout>
