--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -59,11 +59,10 @@
                                 android:visibility="gone" />
 
                             <ImageView
-                                android:layout_width="@dimen/_120sdp"
-                                android:layout_height="@dimen/_45sdp"
-                                android:layout_gravity="center"
+                                android:layout_width="@dimen/NontonSize90"
+                                android:layout_height="@dimen/_35sdp"
                                 android:contentDescription="TODO"
-                                android:src="@drawable/vipalogo512" />
+                                android:src="@drawable/vipalogo180" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
