branding chnages wip

--- a/app/src/main/res/drawable/ic_movie.xml
+++ b/app/src/main/res/drawable/ic_movie.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
 
     <path
-        android:pathData="M0 0h24v24H0V0z" />
+        android:pathData="M0,0H32V32H0Z" />
     <path
         android:fillColor="#000000"
-        android:pathData="M4 6.47L5.76 10H20v8H4V6.47M22 4h-4l2 4h-3l-2-4h-2l2 4h-3l-2-4H8l2 4H7L5 4H4c-1.1 0-1.99 0.9 -1.99 2L2 18c0 1.1 0.9 2 2 2h16c1.1 0 2-0.9 2-2V4z" />
+        android:pathData="M3.736,8.112A2.738,2.738,0,0,0,2,10.667V27.238A2.78,2.78,0,0,0,4.8,30H27.2A2.78,2.78,0,0,0,30,27.238V10.667A2.772,2.772,0,0,0,27.2,7.9H10.82L22.384,3.292,21.432,1ZM9,27.238A4.143,4.143,0,1,1,13.2,23.1,4.166,4.166,0,0,1,9,27.238ZM27.2,16.19H24.4V13.429H21.6V16.19H4.8V10.667H27.2Z" />
 </vector>
