--- a/app/src/main/res/drawable/ic_star.xml
+++ b/app/src/main/res/drawable/ic_star.xml
@@ -2,12 +2,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="32"
+    android:viewportHeight="32">
 
     <path
-        android:pathData="M0 0h24v24H0V0z" />
+        android:pathData="M0,0H32V32H0Z" />
     <path
         android:fillColor="#000000"
-        android:pathData="M22 9.24l-7.19-0.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-0.38L12 6.1l1.71 4.04 4.38 0.38 -3.32 2.88 1 4.28L12 15.4z" />
+        android:pathData="M25,3V5.889H22V3H10V5.889H7V3H4V29H7V26.111h3V29H22V26.111h3V29h3V3ZM10,23.222H7V20.333h3Zm0-5.778H7V14.556h3Zm0-5.778H7V8.778h3ZM25,23.222H22V20.333h3Zm0-5.778H22V14.556h3Zm0-5.778H22V8.778h3Z" />
 </vector>
