--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,6 +96,7 @@
         <item name="more_layout_background_color">@color/white</item>
         <item name="more_recyclerview_background_color">@color/white</item>
         <item name="more_item_text_color">@color/navy_blue</item>
+        <item name="change_language_text_color">@color/navy_blue</item>
         <item name="more_item_bottom_line_color">@color/subtitlecolor</item>
         <item name="toolbar_text_color">@color/navy_blue</item>
         <item name="toolbar_back_arrow">@drawable/back_arrow_navy_blue</item>
@@ -197,7 +198,7 @@
         <item name="title_color">@color/description_title_white</item>
         <item name="search_edt_backgroundColor">@color/theme_background_dark</item>
         <item name="backgroundColor">@color/theme_background_dark</item>
-        <item name="header_text_color">@color/description_title_white</item>
+        <item name="header_text_color">@color/description_title_yellow</item>
         <item name="more_text_color">@color/more_text_color_dark</item>
         <item name="circle_item_background_color">@color/black</item>
         <item name="simmer_background">@color/shimmerDark</item>
@@ -205,6 +206,7 @@
         <item name="more_layout_background_color">@color/black_theme_color</item>
         <item name="more_recyclerview_background_color">@color/black_theme_color</item>
         <item name="more_item_text_color">@color/more_listtitle_color</item>
+        <item name="change_language_text_color">@color/change_language_color</item>
         <item name="more_item_bottom_line_color">@color/search_toolbar_color</item>
         <item name="toolbar_text_color">@color/white</item>
         <item name="toolbar_back_arrow">@drawable/ic_arrow_back_black_24dp</item>
