--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -103,9 +103,9 @@
     <color name="black_overlay">#66000000</color>
     <color name="more_text_color_dark">#ffffff</color>
     <color name="more_text_color_light">#391F68</color>
-    <color name="toolbar_bg_color_dark">#231f20</color>
+    <color name="toolbar_bg_color_dark">#000000</color>
     <color name="toolbar_bg_color_light">#ffffff</color>
-    <color name="bottom_navigation_bg_dark">#333333</color>
+    <color name="bottom_navigation_bg_dark">#272727</color>
     <color name="bottom_navigation_bg_light">#ffffff</color>
     <color name="shimmerDark">#2d3239</color>
     <color name="shimmerLight">#e9e9e9</color>
