--- a/app/src/main/res/layout/heading_rails.xml
+++ b/app/src/main/res/layout/heading_rails.xml
@@ -43,6 +43,7 @@
                 android:text="@string/title_more"
                 android:textColor="?attr/more_text_color"
                 android:textSize="@dimen/railMore"
+                android:layout_marginTop="@dimen/_4sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
