profile ui changes

--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="20dp" />
-            <solid android:color="@color/moretitlecolor" />
+            <solid android:color="@color/description_title_yellow" />
 
         </shape>
     </item>
