--- a/app/src/main/res/drawable/circular_drawable.xml
+++ b/app/src/main/res/drawable/circular_drawable.xml
@@ -17,7 +17,7 @@
         android:right="2dp">
 
         <shape android:shape="oval">
-            <solid android:color="@color/moretitlecolor" />
+            <solid android:color="@color/description_title_yellow" />
         </shape>
 
     </item>
