--- a/app/src/main/res/drawable/ic_more.xml
+++ b/app/src/main/res/drawable/ic_more.xml
@@ -2,12 +2,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:viewportWidth="32"
+    android:viewportHeight="32">
 
     <path
-        android:pathData="M0 0h24v24H0V0z" />
+        android:pathData="M0,0H32V32H0Z" />
     <path
         android:fillColor="#000000"
-        android:pathData="M6 10c-1.1 0-2 0.9-2 2s0.9 2 2 2 2-0.9 2-2-0.9-2-2-2zm12 0c-1.1 0-2 0.9-2 2s0.9 2 2 2 2-0.9 2-2-0.9-2-2-2zm-6 0c-1.1 0-2 0.9-2 2s0.9 2 2 2 2-0.9 2-2-0.9-2-2-2z" />
+        android:pathData="M16,16a6,6,0,1,0-6-6A6,6,0,0,0,16,16Zm0,3c-4.005,0-12,2.01-12,6v3H28V25C28,21.01,20.005,19,16,19Z" />
 </vector>
