--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -88,7 +88,8 @@
     <color name="edit_text">#94FFFFFF</color>
     <color name="home_screen_seperator">#12575757</color>
     <color name="icons_color">#999999</color>
-    <color name="more_listtitle_color">#999999</color>
+    <color name="icons_color_dark">#ffffff</color>
+    <color name="more_listtitle_color">#ffffff</color>
     <color name="change_language_color">#ffffff</color>
     <color name="progress_bar_color">#006de4</color>
     <color name="splash_bg_color">#1F1E2F</color>
