--- a/app/src/main/res/drawable/frequently_ask_question.xml
+++ b/app/src/main/res/drawable/frequently_ask_question.xml
@@ -9,5 +9,5 @@
         android:pathData="M0,0H32V32H0Z" />
     <path
         android:fillColor="#ffffff"
-        android:pathData="M16,16a6,6,0,1,0-6-6A6,6,0,0,0,16,16Zm0,3c-4.005,0-12,2.01-12,6v3H28V25C28,21.01,20.005,19,16,19Z" />
+        android:pathData="M14.6,24.4h2.8V21.6H14.6ZM16,2A14,14,0,1,0,30,16,14.005,14.005,0,0,0,16,2Zm0,25.2A11.2,11.2,0,1,1,27.2,16,11.215,11.215,0,0,1,16,27.2ZM16,7.6a5.6,5.6,0,0,0-5.6,5.6h2.8a2.8,2.8,0,0,1,5.6,0c0,2.8-4.2,2.45-4.2,7h2.8c0-3.15,4.2-3.5,4.2-7A5.6,5.6,0,0,0,16,7.6Z" />
 </vector>
