--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -119,7 +119,7 @@
                                     android:contentDescription="TODO"
                                     android:padding="@dimen/NontonSize4"
                                     android:src="?attr/email_icon_background"
-                                    android:visibility="gone" />
+                                     />
 
                                 <EditText
                                     android:id="@+id/etUserName"
@@ -131,8 +131,9 @@
                                     android:inputType="textEmailAddress|textNoSuggestions"
                                     android:padding="@dimen/NontonSize5"
                                     android:textColor="?attr/app_edit_text_color"
-                                    android:textColorHint="?attr/new_password_text_and_hint_color"
-                                    android:textSize="@dimen/TextSize14" />
+                                    android:textColorHint="?attr/app_edit_text_color"
+                                    android:textSize="@dimen/TextSize14"
+                                    />
                             </LinearLayout>
 
                             <View
@@ -166,7 +167,7 @@
                                     android:contentDescription="TODO"
                                     android:padding="@dimen/NontonSize4"
                                     android:src="?attr/lock_icon"
-                                    android:visibility="gone" />
+                                     />
 
                                 <EditText
                                     android:id="@+id/etPassword"
@@ -178,8 +179,9 @@
                                     android:inputType="textPassword|textNoSuggestions"
                                     android:padding="@dimen/NontonSize5"
                                     android:textColor="?attr/app_edit_text_color"
-                                    android:textColorHint="?attr/new_password_text_and_hint_color"
-                                    android:textSize="@dimen/TextSize14" />
+                                    android:textColorHint="?attr/app_edit_text_color"
+                                    android:textSize="@dimen/TextSize14"
+                                    />
 
 
                             </LinearLayout>
@@ -332,7 +334,7 @@
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/sarabun_v7_thai_latin_regular"
                                 android:text="@string/forgot_password_u"
-                                android:textColor="@color/popular_search_color"
+                                android:textColor="@color/description_title_yellow"
                                 android:textSize="@dimen/TextSize12" />
 
                             <TextView
@@ -366,7 +368,7 @@
                                     android:layout_marginBottom="@dimen/NontonSize1"
                                     android:fontFamily="@font/sarabun_v7_thai_latin_regular"
                                     android:text="@string/signup"
-                                    android:textColor="@color/popular_search_color"
+                                    android:textColor="@color/description_title_yellow"
                                     android:textSize="@dimen/TextSize14" />
 
                             </FrameLayout>
