--- a/app/src/main/res/drawable/add_to_watchlist.xml
+++ b/app/src/main/res/drawable/add_to_watchlist.xml
@@ -8,6 +8,6 @@
     <path
         android:pathData="M0 0h24v24H0V0z" />
     <path
-        android:fillColor="#a19e9e"
+        android:fillColor="#ffffff"
         android:pathData="M14 10H2v2h12v-2zm0-4H2v2h12V6zm4 8v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zM2 16h8v-2H2v2z" />
 </vector>
