--- a/app/src/main/res/layout/detail_screen.xml
+++ b/app/src/main/res/layout/detail_screen.xml
@@ -223,7 +223,7 @@
                                     android:layout_gravity="center_vertical"
                                     android:layout_marginEnd="@dimen/movie_metadata_tag_margin_margin_right"
                                     android:fontFamily="@font/sarabun_v7_thai_latin_regular"
-                                    android:textColor="@color/white"
+                                    android:textColor="@color/gray_thai"
                                     android:textSize="@dimen/font_small" />
 
                                 <TextView
