--- a/app/src/main/res/layout/episode_screen.xml
+++ b/app/src/main/res/layout/episode_screen.xml
@@ -151,13 +151,13 @@
                                         android:id="@+id/movie_title"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:layout_alignParentLeft="true"
+                                        android:layout_marginRight="@dimen/_4sdp"
+                                        android:layout_toLeftOf="@+id/mPremiumStatus"
                                         android:fontFamily="@font/sarabun_v7_thai_latin_medium"
                                         android:lineHeight="@dimen/movie_title_line_height"
                                         android:singleLine="true"
-                                        android:layout_marginRight="@dimen/_4sdp"
-                                        android:layout_alignParentLeft="true"
                                         android:text="@{responseApi.title}"
-                                        android:layout_toLeftOf="@+id/mPremiumStatus"
                                         android:textColor="?attr/title_color"
                                         android:textSize="@dimen/font_large"
                                         tools:targetApi="p" />
@@ -226,7 +226,7 @@
                                         android:layout_gravity="center_vertical"
                                         android:layout_marginEnd="@dimen/movie_metadata_tag_margin_margin_right"
                                         android:fontFamily="@font/sarabun_v7_thai_latin_regular"
-                                        android:textColor="@color/white"
+                                        android:textColor="@color/gray_thai"
                                         android:textSize="@dimen/font_small" />
 
                                     <TextView
@@ -381,12 +381,11 @@
                             android:background="?attr/backgroundColor"
                             android:minHeight="?actionBarSize"
                             app:tabGravity="fill"
-                            app:tabIndicatorColor="@color/more_text_color_dark"
+                            app:tabIndicatorColor="@color/description_title_yellow"
                             app:tabMode="fixed"
                             android:tabStripEnabled="true"
                             app:tabSelectedTextColor="@color/white"
                             app:tabTextColor="?attr/cancel_text_color"
-
                             >
 
                         </com.google.android.material.tabs.TabLayout>
@@ -394,7 +393,8 @@
                             android:background="@color/description_grey"
                             android:layout_width="match_parent"
                             android:layout_alignBottom="@+id/tabLayout"
-                            android:layout_height="1dp" />
+                            android:layout_height="1dp"
+                            />
 
                     </RelativeLayout>
 
