--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,9 +33,10 @@
     <color name="transBlackColor">#79000000</color>
     <color name="transparentColor">#00000000</color>
     <color name="white">#ffffff</color>
-    <color name="description_title_white">#fefefe</color>
+    <color name="gray_thai">#989898</color>
+    <color name="description_title_white">#ffffff</color>
     <color name="description_title_yellow">#f68b1f</color>
-    <color name="description_grey">#929292</color>
+    <color name="description_grey">#989898</color>
     <color name="less_white">#7de3e3e3</color>
     <color name="navy_blue">#191925</color>
     <color name="blue_color">#391F68</color>
@@ -74,12 +75,12 @@
     <color name="theme_white">#ffffff</color>
     <color name="theme_black">#000000</color>
 
-    <color name="black_theme_color">#1a1a1a</color>
+    <color name="black_theme_color">#181818</color>
     <color name="bottom_nav_color_f">#757575</color>
     <color name="bottom_nav_color_t">#ffffff</color>
     <color name="title_header_color">#B4FFFFFF</color>
 
-    <color name="subtitlecolor">#a19e9e</color>
+    <color name="subtitlecolor">#989898</color>
     <color name="dialog_green_color">#006de4</color>
 
     <color name="search_toolbar_color">#212121</color>
