--- a/app/src/main/res/drawable/arrow_down.xml
+++ b/app/src/main/res/drawable/arrow_down.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="35dp"
     android:height="35dp"
-    android:tint="@color/moretitlecolor"
+    android:tint="@color/description_title_yellow"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0">
     <path
