--- a/app/src/main/res/layout/row_search_category.xml
+++ b/app/src/main/res/layout/row_search_category.xml
@@ -23,7 +23,7 @@
                 android:fontFamily="@font/sarabun_v7_thai_latin_extra_light"
                 android:singleLine="true"
                 android:textAllCaps="true"
-                android:textColor="?attr/row_search_title_color"
+                android:textColor="?attr/header_text_color"
                 android:textSize="@dimen/search_header_title" />
 
 
@@ -33,11 +33,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                app:cardCornerRadius="@dimen/NontonSize10">
+                app:cardCornerRadius="@dimen/NontonSize10"
+                >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    >
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -46,11 +48,13 @@
                         android:layout_marginTop="@dimen/NontonSize10"
                         android:layout_marginRight="@dimen/NontonSize10"
                         android:layout_marginBottom="@dimen/NontonSize10"
-                        android:drawablePadding="@dimen/NontonSize10"
+                        android:paddingLeft="@dimen/NontonSize7"
+                        android:paddingRight="@dimen/NontonSize7"
                         android:fontFamily="@font/sarabun_v7_thai_latin_medium"
                         android:text="@string/show_all_results"
+                        android:background="#444444"
                         android:textColor="?attr/more_text_color"
-                        android:textSize="@dimen/font_medium_large" />
+                        android:textSize="@dimen/font_medium" />
                 </LinearLayout>
 
             </LinearLayout>
